--- a/data/options/index.html
+++ b/data/options/index.html
@@ -3,22 +3,30 @@
 <head>
   <title>Open In VLC media player :: Options</title>
   <style>
-    body {padding: 10px;}
-    input {width: 100%;}
+    body {
+      min-width: 500px;
+    }
+    input {
+      width: 100%;
+      padding: 5px;
+      box-sizing: border-box;
+    }
   </style>
 </head>
 
 <body>
-  <label>
-    Path to VLC executable:
-    <input type="path" id="path">
-  </label>
-  <p>Example: <code>C:\VLC\vlc.exe</code>.
-  <br>
-  In Windows OS, if path is not provided (is empty) <code>%ProgramFiles%\VideoLAN\VLC\vlc.exe</code> directory is used. In Linux, if the path is not set, it is assumed "vlc" binary can be found in the PATH environment variables. In Mac OS, this option is ignored as <code>open -a VLC</code> command is used.</p>
+  <p>
+    <label for="path">Path to VLC executable:</label>
+    <br>
+    <input type="path" id="path" placeholder="example: C:\VLC\vlc.exe">
+  </p>
+  <p>
+    In Windows, if path is not provided (is empty) <code>%ProgramFiles%\VideoLAN\VLC\vlc.exe</code> directory is used. In Linux, if the path is not set, it is assumed that "vlc" binary can be found in the PATH environment variables. In Mac, this option is ignored since <code>open -a VLC</code> command is used.
+  </p>
 
   <div>
-    <button id="save">Save</button><span id="status"></span>
+    <button id="reset">Reset</button>
+    <button id="support">Support Development</button> - <button id="save">Save</button> <span id="status"></span>
   </div>
 
   <script src="index.js"></script>
