--- a/firefox/data/inject/index.html
+++ b/firefox/data/inject/index.html
@@ -19,18 +19,23 @@
         width: 100%;
         flex:  1;
         outline: none;
-        border: solid 1px #a5a5a5;
+        border: solid 1px #f7ba79;
       }
       #toolbar {
-        display: flex;
-        justify-content: flex-end;
-        padding: 10px 0;
+        display: grid;
+        grid-template-columns: 1fr min-content min-content;
+        grid-gap: 2px;
+        margin-top: 2px;
       }
       input {
-        margin-left: 5px;
-        border: solid 1px #a5a5a5;
+        border: solid 1px #f7ba79;
+        background-color: #fff;
         padding: 5px 10px;
         cursor: pointer;
+        outline: none;
+      }
+      [data-cmd=close-me] {
+        justify-self: start;
       }
     </style>
   </head>
@@ -39,6 +44,7 @@
     <select size=8 multiple></select>
     <div id="toolbar">
       <input type="button" value="Close" data-cmd="close-me">
+      <input type="button" value="Copy to Clipboard" data-cmd="copy">
       <input type="button" value="Open in VLC" data-cmd="open-in">
     </div>
     <script src="index.js"></script>
