--- a/firefox/data/options/index.html
+++ b/firefox/data/options/index.html
@@ -3,9 +3,6 @@
 <head>
   <title>Open In VLC media player :: Options</title>
   <style>
-    body {
-      min-width: 500px;
-    }
     input[type="path"] {
       width: 100%;
       padding: 5px;
@@ -21,7 +18,7 @@
     <input type="path" id="path" placeholder="example: C:\VLC\vlc.exe">
   </p>
   <p>
-    In Windows, if path is not provided (is empty) <code>%ProgramFiles%\VideoLAN\VLC\vlc.exe</code> directory is used. In Linux, if the path is not set, it is assumed that "vlc" binary can be found in the PATH environment variables. In Mac, this option is ignored since <code>open -a VLC</code> command is used.
+    On Windows, if path is not provided (is empty) <code>%ProgramFiles%\VideoLAN\VLC\vlc.exe</code> directory is used. On Linux, if the path is not set, it is assumed that the "vlc" binary can be found in the PATH environment variables. On Mac, this option is ignored since <code>open -a VLC</code> command is used.
   </p>
   <p>
     <label><input type="checkbox" id="m3u8"> When there are more than one media links, send them all in an M3U8 container at once.</label>
