--- a/v2/firefox/data/options/index.html
+++ b/v2/firefox/data/options/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Open In VLC media player :: Options</title>
   <link rel="stylesheet" type="text/css" href="index.css">
+  <meta charset="utf-8">
 </head>
 
 <body>
@@ -23,13 +24,14 @@
     <div class="note pack">Open FAQs page on updates to notify about the recent changes.</div>
   </div>
 
-  <div data-cols="4" id="explore"></div>
+  <div data-cols="3" id="explore"></div>
 
   <p>
     <button id="reset">Reset</button>
     <button id="support">Support Development</button> - <button id="save">Save Options</button> <span id="toast"></span>
   </p>
 
+  <script src="matched.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
