--- a/v3/data/options/index.html
+++ b/v3/data/options/index.html
@@ -15,6 +15,15 @@
       </p>
   </div>
 
+  <div class="one">
+    <label for="blacklist">Filter URLs or Media Types (seperated by comma)</label>
+    <input type="text" id="blacklist" placeholder="example: youtube,w3schools.com,mp4,avi">
+    <p class="note">
+      This option is used to filter out URLs or Media Types from the list of URLs or Media Types to be opened in VLC.
+      Removes all URLs or Media Types that match the provided filter.
+    </p>
+  </div>
+
   <div class="two">
     <input type="checkbox" id="m3u8">
     <label for="m3u8">M3U8 Container</label>
