--- a/v3/data/options/index.html
+++ b/v3/data/options/index.html
@@ -13,6 +13,11 @@
   </div>
 
   <div class="one">
+    <label for="media-types">Show "Open in VLC" context menu for the following file extensions</label>
+    <textarea rows="5" id="media-types"></textarea>
+  </div>
+
+  <div class="one">
     <label for="blacklist"><a data-href="faq12" target="_blank">Filter URLs or Media Types</a> (separated by comma)</label>
     <input type="text" id="blacklist" placeholder="example: youtube, w3schools.com, mp4, avi">
   </div>
@@ -38,6 +43,7 @@
   </p>
 
   <script src="matched.js"></script>
+  <script src="/const.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
