--- a/v3/data/options/index.html
+++ b/v3/data/options/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Options Page :: Open In VLC media player</title>
+  <title>Options Page :: Open in VLC</title>
   <link rel="stylesheet" type="text/css" href="index.css">
   <meta charset="utf-8">
 </head>
