--- a/v3/data/copy/index.html
+++ b/v3/data/copy/index.html
@@ -3,28 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Copy to Clipboard :: Open in VLC</title>
-  <style>
-    html,
-    body {
-      height: 100%;
-    }
-    body {
-      font-family: "Helvetica Neue",Helvetica,sans-serif;
-      font-size: 13px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0;
-    }
-    input[type=button] {
-      cursor: pointer;
-      border: none;
-      border-radius: 0;
-      padding: 7px;
-      outline: none;
-      min-width: 90px;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
   <input type="button" id="copy" value="Copy to Clipboard">
