--- a/v3/data/helper/index.html
+++ b/v3/data/helper/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Integration :: Open in VLC™ media player</title>
+  <title>Integration :: Open in VLC</title>
 <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
