--- a/v3/data/copy/index.html
+++ b/v3/data/copy/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Copy to Clipboard :: Open in VLC</title>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
