--- a/v3/data/options/index.html
+++ b/v3/data/options/index.html
@@ -45,6 +45,8 @@
     <input type="checkbox" id="one-instance">
     <label for="send-title-meta">Send <a data-href="faq14" target="_blank">Page Title</a> as VLC argument</label>
     <input type="checkbox" id="send-title-meta">
+    <label for="send-referrer">Use <code>http-referrer</code> argument to send the page as the referrer</label>
+    <input type="checkbox" id="send-referrer">
     <label for="use-page-title">Use <a data-href="faq14" target="_blank">Page Title</a> for M3U8 Tracks</label>
     <input type="checkbox" id="use-page-title">
     <label for="faqs">Open FAQs Page on Updates</label>
