--- a/v3/data/options/index.html
+++ b/v3/data/options/index.html
@@ -47,6 +47,8 @@
     <input type="checkbox" id="send-title-meta">
     <label for="send-referrer">Use <code>http-referrer</code> argument to send the page as the referrer</label>
     <input type="checkbox" id="send-referrer">
+    <label for="send-user-agent">Use <code>http-user-agent</code> argument to send requests with the browser user-agent string</label>
+    <input type="checkbox" id="send-user-agent">
     <label for="use-page-title">Use <a data-href="faq14" target="_blank">Page Title</a> for M3U8 Tracks</label>
     <input type="checkbox" id="use-page-title">
     <label for="faqs">Open FAQs Page on Updates</label>
