Adds basic support for PotPlayer and QMPlay2

--- a/v3/data/options/index.html
+++ b/v3/data/options/index.html
@@ -9,8 +9,17 @@
 
 <body>
   <div class="one">
-    <label for="path">Path to the VLC <a target="_blank" data-href="faq13">executable</a>:</label>
+    <label for="path">Path to the Media Player <a target="_blank" data-href="faq13">executable</a>:</label>
     <input type="text" id="path" placeholder="example: C:\VLC\vlc.exe">
+  </div>
+
+  <div class="one">
+    <label for="media-player">Preferred Media Player</label>
+    <select id="media-player">
+      <option value="VLC">VLC (VideoLAN) (Recommended)</option>
+      <option value="POT">PotPlayer (Windows Only)</option>
+      <option value="QMP">QMPlay2 (Windows Only)</option>
+    </select>
   </div>
 
   <div class="one">
