Change media player from right-click context menu

--- a/v3/data/options/index.html
+++ b/v3/data/options/index.html
@@ -18,7 +18,7 @@
     <select id="media-player">
       <option value="VLC">VLC (VideoLAN) (Recommended)</option>
       <option value="POT">PotPlayer (Windows Only)</option>
-      <option value="QMP">QMPlay2 (Windows Only)</option>
+      <option value="QMP">QMPlay2</option>
     </select>
   </div>
 
