--- a/v3/data/options/index.html
+++ b/v3/data/options/index.html
@@ -44,7 +44,9 @@
 
   <div class="one">
     <label for="user-argument-string"><a data-href="faq16" target="_blank">Custom Arguments</a></label>
-    <textarea rows="3" id="user-argument-string" placeholder="example: --autoscale --video-on-top"></textarea>
+    <textarea rows="5" id="user-argument-string" placeholder="example: --autoscale --video-on-top --title=[[title]]
+
+Use dynamic CSS selectors by wrapping queries in [[]]. To get an element's attribute, append @ with the attribute name, e.g., [[.classname@id]]."></textarea>
   </div>
 
   <div class="two">
