pre| and post| keywords for custom arguments

--- a/v3/data/options/index.html
+++ b/v3/data/options/index.html
@@ -44,9 +44,9 @@
 
   <div class="one">
     <label for="user-argument-string"><a data-href="faq16" target="_blank">Custom Arguments</a></label>
-    <textarea rows="5" id="user-argument-string" placeholder="example: --autoscale --video-on-top --title=[[title]]
+    <textarea rows="5" id="user-argument-string" placeholder="example: --autoscale --video-on-top --meta-title=[[title]]
 
-Use dynamic CSS selectors by wrapping queries in [[]]. To get an element's attribute, append @ with the attribute name, e.g., [[.classname@id]]."></textarea>
+Using incorrect arguments may prevent VLC from opening or cause it to crash. Please refer to the FAQs page for instructions."></textarea>
   </div>
 
   <div class="two">
